Refactor code to remove init(self, provider, cluster_name, extra=None) function of class AnsibleConfigurationTool

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@
 ansible==2.8.8 # GPL-3.0 for Ansible playbook execution
 openstacksdk==0.46.0 # for Ansible playbook execution when using OpenStack
 netaddr==0.7.19 # for using 'ipaddr' in ip_contains.yaml Ansible artifact
+pyyaml
+six
