Added grpc server for clouni

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,10 @@ classifier =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
 
+[files]
+packages =
+    toscatranslator
+
 [options]
 packages = find:
 include_package_data = True
@@ -23,6 +27,7 @@ include_package_data = True
 [options.entry_points]
 console_scripts =
     clouni = toscatranslator.shell:main
+    clouni-server = toscatranslator.clouni_server:serve
 
 [options.packages.find]
 exclude =
