Added --host and --no-host-error options. Deleted unused files. Grouped files into directories by project. Restore shell.py and get rid of clouni-server's dependence on it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ classifier =
 [files]
 packages =
     toscatranslator
+    grpc_clouni
+    shell_clouni
 
 [options]
 packages = find:
@@ -26,8 +28,8 @@ include_package_data = True
 
 [options.entry_points]
 console_scripts =
-    clouni = toscatranslator.shell:main
-    clouni-server = toscatranslator.clouni_server:serve
+    clouni = shell_clouni.shell:main
+    clouni-server = grpc_clouni.clouni_server:serve
 
 [options.packages.find]
 exclude =
