clouni-client CLI added, minor fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ include_package_data = True
 console_scripts =
     clouni = shell_clouni.shell:main
     clouni-server = grpc_clouni.clouni_server:serve
+    clouni-client = grpc_clouni.clouni_client:main
 
 [options.packages.find]
 exclude =
