--- a/toscatranslator/common/TOSCA_definition_1_0.yaml
+++ b/toscatranslator/common/TOSCA_definition_1_0.yaml
@@ -898,6 +898,8 @@ interface_types:
     derived_from: tosca.interfaces.Root
     preconfigure:
       description: Operation to pre-configure the node.
+    configure:
+      description: Operation to configure the node.
 
 
 ##########################################################################
