--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -6,8 +6,10 @@ tosca.nodes.Compute:
       meta: openstack.nodes.Server.properties.meta
   - parameter: '{self[buffer][add_host][hostname]}'
     value: '{{{{ {self[keyname]}_floating_ip.floating_ip.floating_ip_address }}}}'
-  - parameter: openstack.nodes.FloatingIp.requirements.server
-    value: "{self[keyname]}_server"
+  - parameter: openstack.nodes.FloatingIp.requirements
+    value:
+      parameter: server
+      value: "{self[keyname]}_server"
   - parameter:  openstack.nodes.FloatingIp.interfaces.Prepare.configure.implementation
     value:
     - executor: ansible
@@ -78,57 +80,55 @@ tosca.nodes.Compute:
           value:
           - port-name: "{self[name]}_port_0"
       public_address:
+        - parameter: openstack.nodes.Server.attributes.auto_ip
+          value: false
         - parameter: openstack.nodes.FloatingIp
           value:
             - attributes.floating_ip_address
-            - parameter: requirements
+            - parameter: requirements.network.node_filter.properties
               value:
-                - parameter: network.node_filter.properties
+                - parameter: name
                   value:
-                    - parameter: name
-                      value:
-                        value: name
-                        facts: os_networks_facts.ansible_facts.openstack_networks
-                        condition: equals
+                    value: name
+                    facts: os_networks_facts.ansible_facts.openstack_networks
+                    condition: equals
+                    executor: ansible
+                    arguments:
+                      - id
+                      - value: network_id
+                        condition: ip_contains
+                        facts:
+                          - source: os_subnets_facts
+                            executor: ansible
+                            value: target_objects
+                            parameters: {}
+                          - source: set_fact
+                            executor: ansible
+                            parameters:
+                              target_objects: "{{{{ target_objects['ansible_facts']['openstack_subnets'] }}}}"
+                            value: temp_value
+                          - source: set_fact
+                            executor: ansible
+                            parameters:
+                              new_target_objects: "{{{{ [] }}}}"
+                            value: tmp_value
+                          - source: set_fact
+                            parameters:
+                              new_target_objects: "{{{{ new_target_objects + [item | combine({{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) }})] }}}}"
+                            extra:
+                              with_items: "{{{{ target_objects }}}}"
+                            value: temp_value
+                            executor: ansible
+                          - source: set_fact
+                            parameters:
+                              target_objects: "{{{{ new_target_objects }}}}"
+                            value: temp_value
+                            executor: ansible
                         executor: ansible
                         arguments:
-                          - id
-                          - value: network_id
-                            condition: ip_contains
-                            facts:
-                              - source: os_subnets_facts
-                                executor: ansible
-                                value: target_objects
-                                parameters: {}
-                              - source: set_fact
-                                executor: ansible
-                                parameters:
-                                  target_objects: "{{{{ target_objects['ansible_facts']['openstack_subnets'] }}}}"
-                                value: temp_value
-                              - source: set_fact
-                                executor: ansible
-                                parameters:
-                                  new_target_objects: "{{{{ [] }}}}"
-                                value: tmp_value
-                              - source: set_fact
-                                parameters:
-                                  new_target_objects: "{{{{ new_target_objects + [item | combine({{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) }})] }}}}"
-                                extra:
-                                  with_items: "{{{{ target_objects }}}}"
-                                value: temp_value
-                                executor: ansible
-                              - source: set_fact
-                                parameters:
-                                  target_objects: "{{{{ new_target_objects }}}}"
-                                value: temp_value
-                                executor: ansible
-                            executor: ansible
-                            arguments:
-                              - allocation_pool_start
-                              - allocation_pool_end
-                              - "{self[value]}"
-            - parameter: openstack.nodes.Server.attributes.auto_ip
-              value: false
+                          - allocation_pool_start
+                          - allocation_pool_end
+                          - "{self[value]}"
         - parameter: '{self[buffer][add_host][groups]}'
           value: '{self[keyname]}'
 #        - parameter: openstack.nodes.Server.interfaces.Prepare.preconfigure.implementation
