Changed testing, not finished

--- a/examples/ansible-server-example.yaml
+++ b/examples/ansible-server-example.yaml
@@ -1,2 +1,6 @@
 - debug:
     msg: "SUCCESSFULL"
+  when: version is defined
+- fail:
+    msg: "Version is undefined"
+  when: version is undefined
